--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 	   <meta charset="utf-8">
+	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	   <link rel="stylesheet" href="css/index.css">
+	   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	   <script src="js/index.js"></script>
 	   <title>C L O A K</title>
 	</head>
 	<body>
