Preciso desse html pronto para adiantar.

--- a/html/mensagem.html
+++ b/html/mensagem.html
@@ -1,1 +1,13 @@
-
+<DOCTYPE html>
+<html lang="pt_br">
+	<head>
+	   <meta charset="utf-8">
+	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	   <link rel="stylesheet" href="css/index.css">
+	   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	   <script src="js/index.js"></script>
+	   <title>C L O A K - Fale Conosco!</title>
+	</head>
+	<body>
+	</body>
+</html>
