Adição Do Anúncio das camisas

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
               </form>
            </div>
         </nav>
+
+	<div class="card text-center">
+ 
+    <div class="card-body">
+    <h5 class="card-title">Compre já a camisa da sua banda favorita!</h5>
+    <a href="#" class="btn btn-primary">Confira já!</a>
+    </div>
+  
+    </div>
      </header>
    </body>
 </html>
