--- a/index.html
+++ b/index.html
@@ -37,21 +37,17 @@
         <a class="nav-link" href="#">Novidades</a>
       </li>
 
-	  <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Bandas Disponíveis
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Metallica</a>
-          <a class="dropdown-item" href="#">Panic! At The Disco</a>
-	 <a class="dropdown-item" href="#">System Of A Down</a>
-        </div>
+      <li class="nav-item">
+	      <a class="nav-link" href="#">Fale Conosco</a>      
       </li>
 	  
-	   <li class="nav-item">
-        <a class="nav-link" href="#">Camisas</a>
-      </li>
+		      
+     <li class="nav-item">
+       <a class="nav-link" href="#">Camisas</a>
+     </li>
+
     </ul>
+
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
