Correção CARD TEXT-CENTER

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	
 </header>
 
+
+    <div class="text-center">
+
     <div class="card-body">
     <h5 class="card-title">Compre já a camisa da sua banda favorita!</h5>
     <a href="#" class="btn btn-primary">Confira já!</a>
