--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <link rel="stylesheet" type="text/css" href="css/index.css">
-      <title>C L O A K</title>
+      <title>C L O A K (false)</title>
    </head>
    <body> 
       <!-- Início do Cabeçalho -->
-      <header>
-	<h1 text-align:center;>C L O A K</h1>
+      <header id="style">
+	<h1>C L O A K</h1>
 
 	<!-- Início da Barra de Navegação -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -64,6 +64,201 @@
     </div>
   
     </div>
-     </header>
+	
+	
+	 <!-- Blusa Panic -->
+ 
+<div class="row text-center">
+
+
+  <div class="col-sm-4">
+  
+  
+   <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+   
+   <div class="carousel-inner">
+   
+    <div class="card carousel-item active">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="panic1.jpg" data-holder-rendered="true">
+      <div class="card-body">
+        <h5 class="card-title">Camisa Panic! At The Disco</h5>
+        <p class="card-text">Clique E Confira!</p>
+	
+    </div>
+    </div>
+  
+	
+	
+
+   
+   
+    <div class="card carousel-item">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="panic2.jpg" data-holder-rendered="true">
+      <div class="card-body">
+        <h5 class="card-title">Camisa Panic! At The Disco</h5>
+        <p class="card-text">Clique E Confira!</p>
+		
+		
+		
+    </div>
+    </div>
+  
+	
+	
+		 <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Anterior</span>
+         </a>
+		 
+         <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Próximo</span>
+         </a>
+	
+	
+	
+   </div>
+   </div>
+   </div>
+  
+  
+   
+ 
+ <!-- Blusa Metallica -->
+ 
+ 
+ 
+ 
+ 
+   <div class="col-sm-4">
+   
+  
+   <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+   
+   <div class="carousel-inner">
+   
+    <div class="card carousel-item active">
+	
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="met1.jpg" data-holder-rendered="true">
+	 
+      <div class="card-body">
+	  
+        <h5 class="card-title">Camisa Metallica</h5>
+        <p class="card-text">Clique E Confira!</p>
+	
+    </div>
+    </div>
+  
+	
+	
+
+   
+   
+    <div class="card carousel-item">
+	
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="met2.jpg" data-holder-rendered="true">
+	 
+    <div class="card-body">
+	  
+        <h5 class="card-title">Camisa Metallica</h5>
+        <p class="card-text">Clique E Confira!</p>
+		
+		
+    </div>
+    </div>
+  
+	
+	
+		 <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Anterior</span>
+         </a>
+		 
+         <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Próximo</span>
+         </a>
+	
+	
+	
+   </div>
+ 
+   
+   
+   
+   </div> 
+   </div>
+   
+   
+   <!-- System OF A Down-->
+   
+   
+    <div class="col-sm-4">
+   
+  
+   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+   
+   <div class="carousel-inner">
+   
+    <div class="card carousel-item active">
+	
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="sys1.jpg" data-holder-rendered="true">
+	 
+      <div class="card-body">
+	  
+        <h5 class="card-title">Camisa Do System Of A Down</h5>
+        <p class="card-text">Clique E Confira!</p>
+	
+    </div>
+    </div>
+  
+	
+	
+
+   
+   
+    <div class="card carousel-item">
+	
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="sys2.jpg" data-holder-rendered="true">
+	 
+    <div class="card-body">
+	  
+        <h5 class="card-title">Camisa Do System Of A Down</h5>
+        <p class="card-text">Clique E Confira!</p>
+		
+		
+    </div>
+    </div>
+  
+	
+	
+		 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Anterior</span>
+         </a>
+		 
+         <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Próximo</span>
+         </a>
+	
+	
+	
+   </div>
+ 
+   
+   
+   
+   </div> 
+   </div>
+	
+	
+	
+	
+	
+	
+	
+    
    </body>
 </html>
+
