--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
    <div class="carousel-inner">
    
     <div class="card carousel-item active">
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="panic1.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="img/panic1.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
         <p class="card-text">Clique E Confira!</p>
@@ -93,7 +93,7 @@
    
    
     <div class="card carousel-item">
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="panic2.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="img/panic2.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
         <p class="card-text">Clique E Confira!</p>
@@ -139,7 +139,7 @@
    
     <div class="card carousel-item active">
 	
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="met1.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="img/met1.jpg" data-holder-rendered="true">
 	 
       <div class="card-body">
 	  
@@ -156,7 +156,7 @@
    
     <div class="card carousel-item">
 	
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="met2.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="img/met2.jpg" data-holder-rendered="true">
 	 
     <div class="card-body">
 	  
@@ -202,7 +202,7 @@
    
     <div class="card carousel-item active">
 	
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="sys1.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="img/sys1.jpg" data-holder-rendered="true">
 	 
       <div class="card-body">
 	  
@@ -219,7 +219,7 @@
    
     <div class="card carousel-item">
 	
-	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="sys2.jpg" data-holder-rendered="true">
+	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="img/sys2.jpg" data-holder-rendered="true">
 	 
     <div class="card-body">
 	  
