Add name no textarea

--- a/html/mensagem.html
+++ b/html/mensagem.html
@@ -71,15 +71,13 @@
    <input type="text" name="email">
    
    <label>Deixe Seu comentário aqui!</label>
-   <textarea placeholder="Espaço Para digitação..."></textarea>
+   <textarea name="msg" placeholder="Espaço Para digitação..."></textarea>
    
    <input type="submit" name="enviar" value="Enviar Mensagem">
    
    </div>
    </div>
-     
-	 
-
+    
    </form>
 
 </body>
