Ediçao Botão Clique e Confira

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="img/panic1.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
-        <p class="card-text">Clique E Confira!</p>
+        <a href="#" class="card-text btn-outline-dark">Clique E Confira!</a>
 	
     </div>
     </div>
