--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
 
-        <a href="#" class="card-text btn-outline-dark">Clique E Confira!</a>
-
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 
 	
     </div>
