--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="img/panic2.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 		
 		
 		
@@ -146,7 +146,7 @@
       <div class="card-body">
 	  
         <h5 class="card-title">Camisa Metallica</h5>
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 	
     </div>
     </div>
@@ -163,7 +163,7 @@
     <div class="card-body">
 	  
         <h5 class="card-title">Camisa Metallica</h5>
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 		
 		
     </div>
@@ -209,7 +209,7 @@
       <div class="card-body">
 	  
         <h5 class="card-title">Camisa Do System Of A Down</h5>
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 	
     </div>
     </div>
@@ -226,7 +226,7 @@
     <div class="card-body">
 	  
         <h5 class="card-title">Camisa Do System Of A Down</h5>
-        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
 		
 		
     </div>
