Adição do link href="php/mensagem.php"
O arquivo mensagem.html não será mais usado no projeto.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </li>
 
       <li class="nav-item">
-	      <a class="nav-link" href="#">Fale Conosco</a>      
+	      <a class="nav-link" href="php/mensagem.php">Fale Conosco</a>      
       </li>
 	  
 		      
