--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Novidades</a>
+        <a class="nav-link" href="html/sobre.html">Sobre</a>
       </li>
 
       <li class="nav-item">
