Revert "Comparando e fundindo!"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </li>
 
       <li class="nav-item">
-	      <a class="nav-link" href="php/mensagem.php">Fale Conosco</a>      
+	      <a class="nav-link" href="#">Fale Conosco</a>      
       </li>
 	  
 		      
@@ -47,7 +47,7 @@
 
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
@@ -82,9 +82,7 @@
 	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Primeiro Slide" alt="Primeiro Slide [800x400]" src="img/panic1.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
-
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
-
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 	
     </div>
     </div>
@@ -98,7 +96,7 @@
 	 <img class="card-img-top" "d-block w-100" data-src="holder.js/800x400?auto=yes&amp;bg=777&amp;fg=555&amp;text=Segundo Slide Slide" alt="Segundo Slide [800x400]" src="img/panic2.jpg" data-holder-rendered="true">
       <div class="card-body">
         <h5 class="card-title">Camisa Panic! At The Disco</h5>
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 		
 		
 		
@@ -146,7 +144,7 @@
       <div class="card-body">
 	  
         <h5 class="card-title">Camisa Metallica</h5>
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 	
     </div>
     </div>
@@ -163,7 +161,7 @@
     <div class="card-body">
 	  
         <h5 class="card-title">Camisa Metallica</h5>
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 		
 		
     </div>
@@ -209,7 +207,7 @@
       <div class="card-body">
 	  
         <h5 class="card-title">Camisa Do System Of A Down</h5>
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 	
     </div>
     </div>
@@ -226,7 +224,7 @@
     <div class="card-body">
 	  
         <h5 class="card-title">Camisa Do System Of A Down</h5>
-        <a href="#" class="card-text btn btn-primary">Clique E Confira!</a>
+        <a href="#" class="card-text btn-primary">Clique E Confira!</a>
 		
 		
     </div>
