--- a/html/sobre.html
+++ b/html/sobre.html
@@ -62,7 +62,7 @@
   <!-- google map -->
   <div class="map-holder">
     <div class="map-container">
-      <iframe class="card-img-top"src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d592.287047762241!2d-43.29596130693801!3d-22.795613234474494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d-22.7256115!2d-43.3040252!4m5!1s0x997af6acef1903%3A0xc01e3bff9476ff15!2ssenac+duque+de+caxias+google+maps!3m2!1d-22.7954138!2d-43.295432!5e1!3m2!1spt-BR!2sbr!4v1548275557761"></iframe>
+      <iframe class="card-img-top"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3678.1902374975894!2d-43.297620685036314!3d-22.79541378506858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997af6acef1903%3A0xc01e3bff9476ff15!2sSenac+Duque+de+Caxias!5e0!3m2!1spt-BR!2sbr!4v1548469082343"></iframe>    
       <!-- fim google maps --> 
     </div>
   
