--- a/html/sobre.html
+++ b/html/sobre.html
@@ -90,14 +90,14 @@
 	
 <div class="col-sm-6">
     
-      <h3>Colaboradores</h3>
+      <h3>Developers</h3>
       <ul style="list-style:none">
-        <li><a href="#">@Ronaldo</a></li>
-        <li><a href="#">@Rhuan</a></li>
-        <li><a href="#">@Cris</a></li>
-        <li><a href="#">@Danilo</a></li>
-        <li><a href="#">@David</a></li>
-		    <li><a href="#">@Giovani</a></li>
+        <li><a href="https://github.com/thegitron">@Ronaldo</a></li>
+        <li><a href="https://github.com/Sheepp1">@Rhuan</a></li>
+        <li><a href="https://github.com/tianagomes">@Cris</a></li>
+        <li><a href="https://github.com/dandanTricolor">@Danilo</a></li>
+        <li><a href="https://github.com/davidnascimento91">@David</a></li>
+	<li><a href="https://github.com/GDias55">@Giovani</a></li>
       </ul>
 </div>
     
