--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <title>Página de Cadastro</title>
@@ -47,9 +46,9 @@
 
     </ul>
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+    <form action="../busca.php" method="post" class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar...  " aria-label="Search" name="banda">
+      <input class="btn btn-outline-dark my-2 my-sm-0" type="submit" name="buscar" value="Pesquisar">
     </form>
   </div>
 </nav>
@@ -84,5 +83,3 @@
       </footer> 
 </body>		
 </html>
-
-
