--- a/html/busca/coldbusca.html
+++ b/html/busca/coldbusca.html
@@ -47,9 +47,10 @@
 
     </ul>
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar...  " aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Pesquisar</button>
+    <form action="busca.php" method="post" class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar...  " aria-label="Search" name="banda">
+      <input class="btn btn-outline-dark my-2 my-sm-0" type="submit" name="buscar" value="Pesquisar">
+    </form>
     </form>
   </div>
 </nav>
